--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</div>
 
 			<div class="mt-6 pb-16 lg:pb-0 w-4/5 lg:w-full mx-auto flex flex-wrap items-center justify-between">
-				<a class="link" href="https://github.com/smoggert" data-tippy-content="@smoggert"><i class="fa-brands fa-github"></a>
+				<a class="link" href="https://github.com/smoggert" data-tippy-content="@smoggert"><i class="fa-brands fa-github"></i></a>
 				<a class="link" href="https://www.linkedin.com/in/peterdebleye/" data-tippy-content="@peterdebleye"><i class="fa-brands fa-linkedin"></i></a>
 			</div>
 			
