--- a/index.html
+++ b/index.html
@@ -42,11 +42,9 @@
 				Current devOps-stack: aws, linux, docker, vms <br>
 				Current backend-stack: php, mySql, redis <br>
 				Current front-end: js, ts, html, css 
-				 - In order of familiarity
-				Frameworks: Laravel, 
 			</p>
 			<p class="pt-8 text-sm">
-				In order of familiarity
+				In order of familiarity <br>
 				Frameworks: Laravel, Symfony, VueJS, AngularJS, React
 			</p>
 			
