Adding more icons

--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
 				Belgium & China	
 			</p>
 			<p class="pt-8 text-sm">
-				Current devOps-stack: aws, linux, docker, vms <br>
-				Current backend-stack: php, mySql, redis <br>
-				Current front-end: js, ts, html, css 
+				<a href="https://aws.amazon.com/" target="_blank"><i class="fa-brands fa-aws"></i></a>
+				<a href="https://ubuntu.com/" target="_blank"><i class="fa-brands fa-ubuntu"></i></a>
+				<a href="https://www.docker.com/" target="_blank"><i class="fa-brands fa-docker"></i></a>
+				<a href="https://www.php.net/" target="_blank"><i class="fa-brands fa-php"></i></a>
+				<a href="https://www.mysql.com/" target="_blank">MySql</a>
+				<a href="https://redis.io/" target="_blank">Redis</a>
+				<i class="fa-brands fa-html5"></i>
+				<i class="fa-brands fa-js"></i>
+				<i class="fa-brands fa-css3-alt"></i>
 			</p>
 			<p class="pt-8 text-sm">
 				In order of familiarity <br>
@@ -55,8 +61,8 @@
 			</div>
 
 			<div class="mt-6 pb-16 w-4/5 mx-auto flex flex-wrap items-center justify-end">
-				<a class="link p-3" href="https://github.com/smoggert" data-tippy-content="@smoggert"><i class="fa-brands fa-github"></i></a>
-				<a class="link p-3" href="https://www.linkedin.com/in/peterdebleye/" data-tippy-content="@peterdebleye"><i class="fa-brands fa-linkedin"></i></a>
+				<a target="_blank" class="link p-3" href="https://github.com/smoggert" data-tippy-content="@smoggert"><i class="fa-brands fa-github"></i></a>
+				<a target="_blank" class="link p-3" href="https://www.linkedin.com/in/peterdebleye/" data-tippy-content="@peterdebleye"><i class="fa-brands fa-linkedin"></i></a>
 			</div>
 			
 			<!-- Use https://simpleicons.org/ to find the svg for your preferred product --> 
